[package]
name = "bam-api-client"
version = "0.1.0"
edition = "2024"
authors = ["Jito Network Maintainers <support@jito.network>"]
repository = "https://github.com/jito-foundation/kobe"
homepage = "https://jito.network/"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["time", "macros", "rt-multi-thread"] }
